--- a/firebase.json
+++ b/firebase.json
@@ -1,11 +1,11 @@
 {
   "hosting": {
     "public": "build",
-
-    // "rewrites": [ {
-    //   "source": "**",
-    //   "destination": "/index.html"
-    // } ],
+    
+    "rewrites": [ {
+      "source": "**",
+      "destination": "/index.html"
+    } ],
 
     "ignore": [
       "firebase.json",
