--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-hook-form": "^7.19.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-scroll-to-top": "^3.0.0",
     "sweetalert": "^2.1.2",
     "web-vitals": "^1.1.2"
   },
